fix(ServiceNetworkingConfigSection): remove text truncation
Removes truncation and wraps content for "Load Balanced Address"
column under the Networking section on the review service screen.

Closes DCOS-41282

--- a/src/styles/content/tables/styles.less
+++ b/src/styles/content/tables/styles.less
@@ -101,6 +101,10 @@
       }
     }
 
+    td.wrap-content {
+      white-space: normal;
+    }
+
     th,
     td {
       display: table-cell;
